Fixed sure-thing overlap in SpinIntro, fixed logo top spacing

--- a/public/stylesheets/spinintro.css
+++ b/public/stylesheets/spinintro.css
@@ -1,6 +1,6 @@
 .content-container {
     position: absolute;
-    top: 2.5%;
+    top: 0px;
     left: 50%;
     transform: translateX(-50%);
 }
@@ -13,7 +13,7 @@
     transform: translateX(-50%);
 }
 .logo-container .top-logo {
-    margin-top: 50px;
+    margin-top: 3vh;
     width: 100%;
     height: auto;
 }
@@ -49,9 +49,10 @@
 }
 
 .text-container {
-    padding: 30px 0px;
+    position: fixed;
     opacity: 0;
     transition: 0.5s;
+    width: 100%;
 }
 .text-container a {
     text-decoration: none;
@@ -59,7 +60,7 @@
 .text-container a h2 {
     text-decoration: none;
     color: white;
-    padding: 15px 0px;
+    padding-top: 1vh;
     transition: 0.3s;
     transition-timing-function: cubic-bezier(.4, -0.5, 0, 1.2);
 }
